# dubna-parser

./: README.md  help_functions.py  models.py  parser.py  pyproject.toml  test.py  test_download.py  test_old_lib.py
data/: весенний семестр 2024-2025 (3).xlsx
downloads/: file1.xlsx  file2.xlsx  file3.xlsx  file4.xlsx
dubna_old_parser/: help_functions.py  models.py  parser.py
dubna_parser/: __init__.py  consts.py  downloader.py  enums.py  models.py  parser.py  utils.py
